we are going...

--- a/ft_containers/inc/Makefile
+++ b/ft_containers/inc/Makefile
@@ -1,4 +1,4 @@
-CPPFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=leak
 
 YELLOW='\033[33m'
 NONE='\033[0m'
