--- a/Inception/srcs/requirements/nginx/conf/wordpress.conf
+++ b/Inception/srcs/requirements/nginx/conf/wordpress.conf
@@ -4,6 +4,9 @@ server {
 	listen 443 ssl;
 	listen [::]:443 ssl;
 	server_name $DOMAIN_NAME;
+	server_name www.$DOMAIN_NAME;
+	server_name https://www.$DOMAIN_ADDRESS;
+
 
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_certificate /etc/nginx/ssl/ssl_certificate.crt;
