--- a/Inception/srcs/requirements/wordpress/Dockerfile
+++ b/Inception/srcs/requirements/wordpress/Dockerfile
@@ -1,7 +1,7 @@
 # Pulling the minimal image
 FROM debian:buster
 
-# Installing requirements :: wordpress, php
+# Installing requirements :: wordpress, php, mariadb-client
 RUN apt-get -yq update && apt-get -yq install vim 
 RUN apt-get install -yq curl 
 RUN apt-get install -yq wget
@@ -9,7 +9,6 @@ RUN apt-get install php7.3-cli php7.3-fpm php7.3-mysql php7.3-json php7.3-opcach
                     php7.3-mbstring php7.3-xml php7.3-cgi php-pear php7.3-zip \
                     php-net-socket php7.3-common php7.3-gd php7.3-curl \
                     php-xml-util php7.3-gettext php7.3-bcmath -yq
-RUN apt-get install -yq sendmail
 RUN apt-get install -yq mariadb-client
 
 # Copying entrypoint from tools
