--- a/Inception/srcs/requirements/nginx/conf/wordpress.conf
+++ b/Inception/srcs/requirements/nginx/conf/wordpress.conf
@@ -1,10 +1,10 @@
 # Basic server config
 
-server {
-    listen 80;
-    server_name $DOMAIN_NAME;
-    return 301 https://$DOMAIN_NAME$request_uri;
-}
+#server {
+#    listen 80;
+#    server_name $DOMAIN_NAME;
+#    return 301 https://$DOMAIN_NAME$request_uri;
+#}
 
 server {
 
@@ -22,6 +22,12 @@ server {
 	autoindex off;
 
 	index index.html index.php;
+
+	location = /favicon.ico {
+		return 404;
+		log_not_found off;
+		access_log off;
+	}
 
 	location / {
 		try_files $uri $uri/ =404;
