--- a/Inception/srcs/.env
+++ b/Inception/srcs/.env
@@ -6,3 +6,7 @@ MYSQL_DATABASE=wordpressdb
 MYSQL_ROOT_PASSWORD=bmachado123root
 MYSQL_USER=bmachado
 MYSQL_PASSWORD=bmachado123
+
+# WP ADMIN
+WPADM_NAME=Nihil
+WPADM_PASSWORD=UnoDosTres
