--- a/Inception/srcs/requirements/nginx/conf/wordpress.conf
+++ b/Inception/srcs/requirements/nginx/conf/wordpress.conf
@@ -1,18 +1,13 @@
 # Basic server config
 
-#server {
-#    listen 80;
-#    server_name $DOMAIN_NAME;
-#    return 301 https://$DOMAIN_NAME$request_uri;
-#}
-
 server {
 
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
-	server_name _;
 	server_name $DOMAIN_NAME;
+	server_name https://$DOMAIN_NAME
+	server_name https://www.$DOMAIN_NAME
 
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_certificate /etc/nginx/ssl/ssl_certificate.crt;
